--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     
     <body>
-        <h1>Hell World!</h1>
+        <h1>Hello World!</h1>
         <h2>Three Things I'm Looking Forward to this School Year</h2>
         <!--Begin List of Things-->
         <ul>
